rustcc/tests/input/parser/invalid/misspelled_keyword.c
// RUN: ${{rustcc}}
// EXPECT-FAILURE

int main(void) {
    returns 0;
}